--- a/html/trangchu.html
+++ b/html/trangchu.html
@@ -7,7 +7,7 @@
      <meta name="keywords" content="PUBG Mobile, PUBG: Battlegrounds,PlayerUnknown's Battlegrounds">
      <meta name="author" content="Trường Huy">
      <title>PUBG Mobile | Trang chủ</title>
-     <link rel="stylesheet" href="./css/style.css">
+     <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
   <header>
